# war_garden

./: .gitignore  PLAN.MD  main.py  pyproject.toml
db/: __init__.py  terminated_games.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: PixiBoard.svelte
frontend/src/routes/: +page.svelte
game/: __init__.py
game/board/: __init__.py  board.py  deck.py  hand.py
game/cards/: __init__.py  cards.py  catalog.py  effects.py
game/cards/card_effects/: __init__.py  card_effects.py
game/cards/content/: card_catalog.toml  catalog.toml
game/engine/: __init__.py  events.py  ids.py  rng.py
game/engine/combat/: __init__.py  combat.py  hit.py
game/engine/shop/: __init__.py  actions.py  card_pool.py  economy.py
game/players/: __init__.py  player.py
game/session/: __init__.py  combat_manager.py  session.py  shop_manager.py  state_manager.py
middleware/: __init__.py  game_manager.py  lobby_manager.py
services/: __init__.py
services/api/: __init__.py  app.py  schemas.py
tests/: test_api.py  test_card_catalog.py  test_combat_resolver.py  test_game_manager.py  test_hit_resolver.py  test_lobby_manager.py  test_session_managers.py  test_shop_round.py
